...
                                1000,
                                1000)
                          }
                    },
                    title = "Start",
                    showIcon = true,
                    testTag = "StartButton")
              }
        }
      }
    }
    isRunning -> {
      Scaffold(modifier = Modifier.fillMaxSize().testTag("MainRunningScreen")) {
        Box(modifier = Modifier.fillMaxSize()) {
          GoogleMap(
              modifier = Modifier.fillMaxSize(), cameraPositionState = cameraPositionState.value) {
                // Display the polyline for the running path
                if (pathPoints.value.isNotEmpty()) {
                  Polyline(points = pathPoints.value, color = Color.Blue, width = 16f)
...
                      isPaused = false
                      isFinished = true
                    },
                    locationOnClick = { isStatsDisplayed = true },
                    isSplit = isPaused,
                    isSelected = true,
                    PauseTestTag = "PauseButton",
                    ResumeTestTag = "ResumeButton",
                    FinishTestTag = "FinishButton",
                    LocationTestTag = "LocationButton")
              }
          Box(
              modifier =
                  Modifier.fillMaxSize()
                      .offset(x = offsetX)
                      .background(color = White) // Animate the horizontal offset
...
                      LocationServiceManager.stopAndResetLocationService(context)
                      isRunning = false
                      isFirstTime = false
                      isPaused = false
                      isFinished = true
                    },
                    PauseTestTag = "PauseButtonStats",
                    ResumeTestTag = "ResumeButtonStats",
                    FinishTestTag = "FinishButtonStats",
                    LocationTestTag = "LocationButtonStats")
              }
        }
      }
    }
    isFinished -> {

...

                OutlinedTextField(
                    value = name,
                    onValueChange = { name = it },
                    label = { Text("Name") },
                    placeholder = { Text("Enter a name") },
                    modifier = Modifier.testTag("nameTextField"))

                OutlinedTextField(
                    value = description,
                    onValueChange = { description = it },
                    label = { Text("Description") },
                    placeholder = { Text("Describe your running session") },
                    modifier = Modifier.testTag("descriptionTextField"))

                Spacer(Modifier.height(41.dp))

                Divider(
                    color = LightGrey,
                    thickness = 2.dp,
...
